hphp/hack/test/typecheck/reactive/print_in_rx6.php.coeffects.exp
File "print_in_rx6.php", line 10, characters 5-8:
`echo` or `print` builtin requires the capability Output, which is not provided by the context. (Typing[4401])
  File "print_in_rx6.php", line 8, characters 23-24:
  The local (enclosing) context provides the capability Rx
